# AsmCube

./: .gitignore  .gitmodules  CMakeLinuxPresets.json  CMakeLists.txt  CMakePresets.json  CMakeWindowsPresets.json  README.rst
.github/workflows/: build.yml
asm_examples/: minimal_print.asm  parser_test.asm  read_write.asm  syntax_test.asm  write_to_file.asm
src/: cereal_overrides.h  global_state.h  lexer.cpp  lexer.h  logging.h  magic_enum_overrides.h  main.cpp  parser.cpp  parser.h  types.h
src/interpreter/: instructions.cpp  instructions.h  interpreter.cpp  interpreter.h  memory.h  mnemonics.h  registers.h  self_test.cpp  self_test.h  symbol_table.h  syscalls.cpp  syscalls.h
src/lexer/: lexer.cpp  lexer.h
src/parser/: parser.cpp  parser.h
src/testcases/: loader.cpp  loader.h  testcase.h
tests/: add.asm  add.yaml  sub.asm  sub.yaml
